syntax = "proto3";

option go_package = "github.com/nais/kolide-event-handler/pkg/pb";

package kolide_event_handler;

import "google/protobuf/timestamp.proto";

service KolideEventHandler {
  rpc Events (EventsRequest) returns (stream DeviceEvent) {

  }
}

message EventsRequest {

}

message DeviceEvent {
  string id = 1;
  string title = 2;
  string event = 3;
  uint64 deviceId = 4;
  uint64 checkId = 5;
  uint64 failureId = 6;
  google.protobuf.Timestamp timestamp = 7;
}